# framcore_test

./: latest  mkdocs.yml  pyproject.toml  ruff.toml  versions.json
.github/workflows/: bckp_publish_docs.yml  framcore_publish_docs.yml  framcore_publish_to_pypi.yml  publish_docs  publish_docs.yml  publish_to_testpypi.yml  template_publish_to_pypi.yml
0.0.3b2/: 404.html
0.0.3b3/reference/: index.html
0.0.3b5/: index.html  objects.inv
0.0.3b6/tables/: table.csv
0.1/search/: search_index.json
docs/: index.md
docs/css/: mkdocstrings.css
docs/reference/: aggregators.md  index.md
framcore/: Model.py  some_file.py
framcore/aggregators/: Aggregator.py  HydroAggregator.py  NodeAggregator.py  WindSolarAggregator.py
framcore/components/: HydroModule.py
framcore/loaders/: loaders.py
framcore/timeindexes/: FixedFrequencyTimeIndex.py  ListTimeIndex.py  OneYearProfileTimeIndex.py
framcore/timevectors/: ListTimeVector.py
framcore/utils/: get_regional_volumes.py
tests/: test_Demand.py  test_FileLoader.py  test_FixedFrequencyTimeIndex_is_one_year.py  test_FrequencyTimeIndex_get_interval.py  test_FrequencyTimeIndex_get_reference_period.py  test_FrequencyTimeIndex_write_into_fixed_frequency.py  test_LoadedTimeVector.py  test_Loader.py  test_Populator.py  test_ensure_expr.py
tests/fingerprint/: test_constant_time_vector_fingerprint.py  test_custom_hash.py  test_expr_fingerprint.py  test_frequency_time_index_fingerprint.py  test_list_time_index_fingerprint.py  test_list_time_vector_fingerprint.py
tests/integration_tests/: test_query_db_functions.py  (+1 more)
(+12 files in other folders)
