[project]
name = "framcore"
version = "0.0.3b3"
description = ""
authors = [
    {name = "The Norwegian Water Resources and Energy Directorate", email = "fram@nve.no"}
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.1.1,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{include = "framcore"}]

[tool.poetry.dependencies]
numpy = "^2.2.2"
pandas = "^2.2.3"
numexpr = "^2.10.2"
sympy = "^1.13.3"
scikit-learn = "^1.7.0"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"
pytest-approvaltests = "^0.2.4"

[tool.poetry.group.check]
optional = true

[tool.poetry.group.check.dependencies]
ruff = "^0.9.6"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocstrings-python = "^1.18.2"
mkdocs-material = "^9.6.18"
mike = "^2.1.3"
mkdocs-macros-plugin = "^1.3.9"
mkdocs-table-reader-plugin = "^3.1.0"
